[package]
name = "balufilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"

[dependencies.bitvec]
version = "1"
default-features = false
features = ["atomic", "alloc"]

[dev-dependencies]
criterion = "0.3"
bloomfilter = "1.0.9"
cuckoofilter = "0.5.0"
highway = "0.8.1"

[[bench]]
name = "simple_benchmark"
harness = false